<resources>
    <string name="app_name">WordCard</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="new_collection">New Collection</string>
    <string name="new_word">New Word</string>
    <string name="wordcard">WordCard</string>
    <string name="collections">Collections</string>
    <string name="sign_out">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_language">First Language</string>
    <string name="second_language">Second Language</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>